<resources>

    <!-- color bind -->

    <string name="black">#000000</string>

    <!-- android app default -->

    <string name="app_name">SINBIO</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SINBIO Mobile</string>

    <!-- main menu -->

    <string name="screen_cadastro_amostra">Cadastro de Amostras</string>
    <string name="screen_lista_de_amostra_pre_cadastradas">Lista de Amostras</string>
    <string name="screen_possible_stuff_1">Possible stuff 1</string>
    <string name="screen_possible_stuff_2">Possible stuff 2</string>

    <!-- default labels -->

    <string name="button">Im a Button :D</string>
    <string name="textview">Im a TextView :D</string>
    <string name="textentry">Im a TextEntry :D</string>

    <!-- buttons labels -->

    <string name="button_label_salvar_registro">Salvar</string>
    <string name="button_label_cancelar_registro">Descartar</string>
    <string name="button_label_tirar_foto">Tirar Foto</string>

    <!-- amostra cadastro general data -->

    <string name="cadastro_amostra_general_data_DELIMITER_TITLE">Dados gerais</string>
    <string name="cadastro_amostra_general_data_DELIMITER_TITLE_SCREEN_ONE">Dados gerais</string>
    <string name="cadastro_amostra_general_data_DELIMITER_TITLE_SCREEN_TWO">Metodo</string>
    <string name="cadastro_amostra_general_data_DELIMITER_TITLE_SCREEN_THREE">Localização</string>
    <string name="cadastro_amostra_general_data_DELIMITER_TITLE_SCREEN_FOUR">Galeria</string>
    <string name="cadastro_amostra_general_data_ID_AMOSTRA">ID da amostra dado pelo coletor</string>
    <string name="cadastro_amostra_general_data_EXPEDICAO">Expedição</string>
    <string name="cadastro_amostra_general_data_PROJETO">Projeto</string>
    <string name="cadastro_amostra_general_data_PROTOCOLO">Protocolo</string>
    <string name="cadastro_amostra_general_data_METODO">Metodo</string>
    <string name="cadastro_amostra_general_data_ATRATIVO">Atrativo</string>
    <string name="cadastro_amostra_general_data_DATA_COLETA">Data da Coleta</string>
    <string name="cadastro_amostra_general_data_HORA_COLETA">Hora da Coleta</string>
    <string name="title_activity_cadastro_amostra">CadastroAmostra</string>
    <string name="cadastro_amostra_localizacao_da_amostra_DELIMITER_TITLE">Localização da Amostra</string>
    <string name="cadastro_amostra_localizacao_da_amostra_LATITUDE">Latidude</string>
    <string name="cadastro_amostra_localizacao_da_amostra_LONGITUDE">Longitude</string>
    <string name="title_activity_general_data">GeneralData</string>
    <string name="title_activity_localization">Localization</string>
    <string name="title_activity_vizualizar_amostras">Lista de Amostras</string>
    <string name="title_activity_swipe_criar_registro_amostra">SwipeCriarRegistroAmostra</string>
    <string name="title_activity_simple_swipe_criar_registro">SimpleSwipeCriarRegistro</string>
    <string name="title_activity_new_simple_swipe_criar_registro_amostra">NewSimpleSwipeCriarRegistroAmostra</string>
    <string name="title_activity_criar_registro_amostra">CriarRegistroAmostra</string>
    <string name="todo">TODO</string>
    <string name="title_activity_take_pic">TakePic</string>
    <string name="title_activity_fotos_registro_amostro">FotosRegistroAmostro</string>
    <string name="screen_fotos_amostra">Gerenciar Fotos</string>
    <string name="fotos_pop_up_selecao_folder_TITLE">Selecione uma pasta :D</string>

</resources>