<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="20dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:showDividers="middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical"
                tools:ignore="UselessParent" >

                <TextView
                    android:id="@+id/textView_cadastro_amostra_general_data_ID_AMOSTRA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_ID_AMOSTRA"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText_cadastro_amostra_general_data_ID_AMOSTRA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_cadastro_amostra_general_data_EXPEDICAO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_EXPEDICAO"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinner_cadastro_amostra_general_data_EXPEDICAO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView_cadastro_amostra_general_data_PROJETO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_PROJETO"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinner_cadastro_amostra_general_data_PROJETO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_cadastro_amostra_general_data_PROTOCOLO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_PROTOCOLO"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinner_cadastro_amostra_general_data_PROTOCOLO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView_cadastro_amostra_general_data_METODO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_METODO"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinner_cadastro_amostra_general_data_METODO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView_cadastro_amostra_general_data_ATRATIVO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_ATRATIVO"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinner_cadastro_amostra_general_data_ATRATIVO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView_cadastro_amostra_general_data_DATA_COLETA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_DATA_COLETA"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText_cadastro_amostra_general_data_DATA_COLETA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:paddingTop="35dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView_cadastro_amostra_general_data_HORA_COLETA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cadastro_amostra_general_data_HORA_COLETA"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText_cadastro_amostra_general_data_HORA_COLETA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>