<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView_criar_registro_amostra_localizacao_da_amostra_DELIMITER_TITLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_color_normal_rounded_top_right_bottom_left"
            android:gravity="center"
            android:text="@string/cadastro_amostra_general_data_DELIMITER_TITLE_SCREEN_THREE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="20dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:showDividers="middle" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="35dp"
                android:paddingTop="35dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_color_normal_rounded_full"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView_criar_registro_amostra_general_data_LATITUDE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/cadastro_amostra_localizacao_da_amostra_LATITUDE"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/editText_criar_registro_amostra_general_data_LATITUDE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="35dp"
                android:paddingTop="35dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_color_normal_rounded_full"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView_criar_registro_amostra_general_data_LONGITUDE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/cadastro_amostra_localizacao_da_amostra_LONGITUDE"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/editText_criar_registro_amostra_general_data_LONGITUDE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>